# Quiz-Tube

./: README.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/db/: models.py  repository.py  session.py  setup.py
backend/llm/: __init__.py
backend/models/: questions.py  transcript.py
backend/services/: generate_questions_service.py  quiz_service.py  youtube_transcript_service.py
quiz-tube/: index.html  package-lock.json  package.json  sidepanel.html  vite.config.ts
quiz-tube/public/: manifest.json
quiz-tube/src/popup/: Popup.tsx  QuizQuestion.tsx  QuizResults.tsx  QuizSetup.tsx  Settings.tsx  main.tsx
quiz-tube/src/types/: quiz.ts
quiz-tube/src/utils/: providers.ts  seekToTimestamp.ts  storage.ts
