[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.48",
    "youtube-transcript-api>=1.2.4",
]
